Add image for VIP Shirts in index.html

--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@
     <script src="https://www.paypal.com/sdk/js?client-id=AZGFbYTdHsMPlQoJYVYjCjUUKeB83lfi1k5AuDZD_70sr7yHE8Ac247Cv3efDssNxt9g-qNY_uWe54ea&currency=ILS"></script>
 </head>
 <body>
+    <img src="https://i.postimg.cc/fTQgw2vK/3554E7D6-78B2-43C1-947D-CD4B1D37A560.jpg" alt="VIP Shirts" style="width: 250px; height: auto; display: block; border: none;">
     <header>
         <h1>VIP Shirts</h1>
     </header>
