--- a/new.html
+++ b/new.html
@@ -686,7 +686,13 @@
         <img src="https://i.postimg.cc/XYRrh5bT/3554E7D6-78B2-43C1-947D-CD4B1D37A560.png" alt="VIP Shirts Logo" class="my-about-logo">
         <div class="my-about-content">
             <h3 class="my-about-title">על VIP Shirts</h3>
-            <p class="my-about-text">החנות המובילה לחולצות כדורגל איכוטיות. אנו מציעים מגוון רחב של חולצות מקוריות מהליגות המובילות בעולם, עם שירות מקצועי ומשלוחים מהירים לכל הארץ.</p>
+            <p class="my-about-text">האתר שלנו נולד מאהבה אמיתית לכדורגל
+כמו הרבה אוהדים, רצינו ללבוש בגאווה את צבעי הקבוצות שאנחנו אוהבים – במחיר הוגן ובלי סיבוכים.
+מכאן התחיל הרעיון להקים מקום אחד שמרכז חולצות כדורגל איכותיות, בעיצובי המועדונים המובילים בעולם, ומנגיש אותן לכל אוהד.
+אנחנו עובדים מול ספקים נבחרים בחו״ל, וההזמנות נשלחות ישירות מהיצרן ללקוח – כדי לחסוך עלויות ולהציע מחירים משתלמים ככל האפשר. כל חולצה נבחרת בקפידה, מתוך מחשבה על נוחות, מראה ואיכות.
+העסק הוא משפחתי וקטן, ואנחנו מאמינים בשירות אישי, שקיפות ויחס הוגן.
+יש לנו מטרה אחת: שכל לקוח יקבל חולצה שהוא גאה ללבוש וחוויית קנייה נעימה ופשוטה.
+תודה שבחרתם להיות חלק מהדרך שלנו ⚽.</p>
         </div>
     </div>
     
