--- a/new.html
+++ b/new.html
@@ -692,7 +692,7 @@
 אנחנו עובדים מול ספקים נבחרים בחו״ל, וההזמנות נשלחות ישירות מהיצרן ללקוח – כדי לחסוך עלויות ולהציע מחירים משתלמים ככל האפשר. כל חולצה נבחרת בקפידה, מתוך מחשבה על נוחות, מראה ואיכות.
 העסק הוא משפחתי וקטן, ואנחנו מאמינים בשירות אישי, שקיפות ויחס הוגן.
 יש לנו מטרה אחת: שכל לקוח יקבל חולצה שהוא גאה ללבוש וחוויית קנייה נעימה ופשוטה.
-תודה שבחרתם להיות חלק מהדרך שלנו ⚽.</p>
+תודה שבחרתם להיות חלק מהדרך שלנו.</p>
         </div>
     </div>
     
