--- a/admin.html
+++ b/admin.html
@@ -290,7 +290,8 @@
 <body>
     <div id="login-overlay">
         <div id="login-form-container">
-            <h2>התחבר לפאנל הניהול</h2>
+            <img src="https://i.postimg.cc/XYRrh5bT/3554E7D6-78B2-43C1-947D-CD4B1D37A560.png" alt="VIP Shirts" style="width: 200px; height: auto; display: block; margin-left: auto; margin-right: auto;">
+            <h2>התחבר לפאנל הניהול של VIP shirts</h2>
             <input type="text" id="username" placeholder="שם משתמש" autofocus>
             <input type="password" id="password" placeholder="סיסמה">
             <button id="login-button">התחבר</button>
