--- a/new.html
+++ b/new.html
@@ -1450,3 +1450,7 @@ document.addEventListener('DOMContentLoaded', async () => {
     </script>
 </body>
 </html>
+
+<div style="text-align: center;">
+    <a href="terms.html" style="text-decoration: none; color: #007bff; font-weight: bold; font-family: Arial, sans-serif;">תקנון</a>
+</div>
