--- a/new.html
+++ b/new.html
@@ -665,9 +665,12 @@
             <div class="total">סה"כ מוצרים: <span id="cart-subtotal">0.00</span> ₪</div>
             <div class="total">דמי משלוח: <span id="shipping-cost">0.00</span> ₪</div>
             <div class="total" style="font-size: 1.25em; border-top: 2px solid #dc3545; padding-top: 10px; margin-top: 10px;">סה"כ כולל משלוח: <span id="cart-total">0.00</span> ₪</div>
+                        <div class="form-group">
+                <label for="address">בלחיצה על כפתור התלשום אני מאשר את התקנון</label>
             <button id="checkout-button">מעבר לתשלום</button>
         </div>
-    </div>
+     </div>
+</div>
     
     <div class="contact-section">
         <h2>צור קשר</h2>
