--- a/new.html
+++ b/new.html
@@ -1418,7 +1418,7 @@ onApprove: function(data, actions) {
         }
 // הגדרות EmailJS
 const EMAILJS_SERVICE_ID = 'service_pypll0n';
-const EMAILJS_TEMPLATE_ID = 'template_c87wr1z';
+const EMAILJS_TEMPLATE_ID = 'vipshirts';
 const EMAILJS_PUBLIC_KEY = 'f-U3pdugkQiavzAvU';
 
 // אתחול EmailJS
