--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
         <div class="logo-container">
             <img src="https://i.postimg.cc/XYRrh5bT/3554E7D6-78B2-43C1-947D-CD4B1D37A560.png" alt="לוגו האתר" class="logo">
         </div>
-        <h1 class="error-code">סליחה</h1>
-        <p class="error-message">האתר בשיפוצים</p>
+        <h1 class="error-code">האתר בשיפוצים</h1>
+        <p class="error-message">המערכת מחכה להזנת אמצעי סליקה</p>
           <p class="error-message">מתנצלים על אי הנוחות</p>
     </div>
 
