--- a/newdex.html
+++ b/newdex.html
@@ -41,12 +41,12 @@
 header {
     background: #222;
     color: #fff;
-    padding: 20px 30px;          /* קטן יותר */
+    padding: 45px 40px;          /* גובה גדול יותר (אבל לא מוגזם) */
     display: flex;
     align-items: center;         /* יישור אנכי */
-    justify-content: center;     /* יישור אופקי */
-    gap: 20px;
-    font-size: 1.8em;
+    justify-content: center;     /* מרכז כללי */
+    gap: 30px;
+    font-size: 2.1em;
     letter-spacing: 3px;
     border-bottom-left-radius: 16% 8%;
     border-bottom-right-radius: 16% 8%;
@@ -54,14 +54,14 @@ header {
 }
 
 header img {
-    width: 90px;                 /* לוגו קטן יותר */
+    width: 150px;                /* לוגו גדול */
     height: auto;
     margin: 0;
 }
 
 header h1 {
     margin: 0;
-    line-height: 1;
+    line-height: 1.1;
 }
 
         #cart-toggle-button {
